<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="main.java.cz2006project.mojojo.Boundary.Account.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="20"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:id="@+id/account_info_container_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:padding="20dp"
            android:layout_weight="0.1"
            android:background="@color/accountColorPrimary"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <main.java.cz2006project.mojojo.ParseCircularImageView
                    android:id="@+id/account_info_picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/image_default" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <main.java.cz2006project.mojojo.TypeFaceTextView
                    android:id="@+id/account_info_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/user_name"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:typeface="fonts/Gotham-Book.ttf"/>

                <main.java.cz2006project.mojojo.TypeFaceTextView
                    android:id="@+id/account_info_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/email_id"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:typeface="fonts/Gotham-Light.ttf"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/abc_menu_hardkey_panel_mtrl_mult">

            <LinearLayout
                android:id="@+id/account_info_container_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_info_container_uid"
                android:animateLayoutChanges="true"
                android:layout_weight="0"
                android:orientation="horizontal">

                <main.java.cz2006project.mojojo.MaterialEditText
                    android:id="@+id/account_info_emailid"
                    android:layout_width="222dp"
                    android:layout_height="64dp"
                    android:layout_margin="@dimen/fragment_sign_up_edit_text_margin"
                    android:descendantFocusability="beforeDescendants"
                    android:focusable="false"
                    android:hint="@string/email"
                    android:textCursorDrawable="@drawable/text_cursor_cyan"
                    app:baseColor="@color/black"
                    app:primaryColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="15dp" />


                <ImageButton
                    android:id="@+id/cancel_edit_email_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/cross"
                    android:visibility="invisible" />

                <ImageButton
                    android:id="@+id/edit_email_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/pencil"
                    android:layout_weight="1" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/account_info_container_password"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_below="@id/account_info_container_email"
                android:animateLayoutChanges="true"
                android:orientation="horizontal">

                <main.java.cz2006project.mojojo.MaterialEditText
                    android:id="@+id/account_info_password"
                    android:layout_width="209dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/fragment_sign_up_edit_text_margin"
                    android:descendantFocusability="beforeDescendants"
                    android:focusable="false"
                    android:hint="@string/user_password"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/text_cursor_cyan"
                    app:baseColor="@color/black"
                    app:primaryColor="@color/colorPrimaryDark"
                    android:layout_weight="0.13"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textIsSelectable="false" />

                <ImageButton
                    android:id="@+id/cancel_edit_password_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/cross"
                    android:visibility="invisible" />

                <ImageButton
                    android:id="@+id/edit_password_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:src="@drawable/pencil"
                    android:layout_weight="1"
                    android:visibility="visible" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/new_password_form_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_info_container_password"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/account_info_container_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal">

                    <main.java.cz2006project.mojojo.MaterialEditText
                        android:id="@+id/account_info_new_password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/fragment_sign_up_edit_text_margin"
                        android:layout_weight="4"
                        android:descendantFocusability="beforeDescendants"
                        android:focusableInTouchMode="true"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        app:baseColor="@color/black"
                        app:primaryColor="@color/colorPrimaryDark" />

                    <FrameLayout
                        android:id="@+id/empty_button_new_password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <FrameLayout
                        android:id="@+id/empty_button_new_password_2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/account_info_container_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/account_info_container_new_password"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal">

                    <main.java.cz2006project.mojojo.MaterialEditText
                        android:id="@+id/account_info_confirm_password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/fragment_sign_up_edit_text_margin"
                        android:layout_weight="4"
                        android:descendantFocusability="beforeDescendants"
                        android:focusableInTouchMode="true"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textCursorDrawable="@drawable/text_cursor_cyan"
                        app:baseColor="@color/black"
                        app:primaryColor="@color/colorPrimaryDark" />

                    <FrameLayout
                        android:id="@+id/empty_button_confirm_password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <FrameLayout
                        android:id="@+id/empty_button_confirm_password_2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>